[project]
name = "bytepiece-py"
version = "0.2.1"
description = "Add your description here"
authors = [
    { name = "SunDoge", email = "triplez0@outlook.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = [
    "pip>=24.0",
]

[tool.maturin]
python-source = "python"
module-name = "bytepiece_py._lowlevel"
features = ["pyo3/extension-module"]

[tool.rye.scripts]
dev = "maturin develop --skip-install"
