[project]
name = "bytepiece-py"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SunDoge", email = "triplez0@outlook.com" }
]
requires-python = ">=3.8"
dependencies = []

[tool.maturin]
module-name = "bytepiece_py._core"
python-packages = ["bytepiece_py"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.7.8",
]
