[package]
name = "bytepiece"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
aho-corasick = "1.0.5"
base64-simd = "0.8.0"
once_cell = "1.18.0"
ouroboros = "0.18.0"
rand = "0.8.5"
regex = "1.9.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.48"


[features]
default = []


[dev-dependencies]
bytepiece_rs = "0.1.0"
criterion = "0.5.1"

[[bench]]
name = "tokenize"
harness = false
