[package]
name = "bytepiece"
version = "0.3.0"
edition = "2021"
authors = ["SunDoge <384813529@qq.com>"]
description = "Rust version of bytepiece tokenizer"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/SunDoge/bytepiece-rs"
homepage = "https://crates.io/crates/bytepiece"
documentation = "https://docs.rs/bytepiece"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
aho-corasick = "1.1"
base64-simd = "0.8.0"
fastrand = "2.0.1"
once_cell = "1.19.0"
ouroboros = "0.18.3"
regex = "1.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"


[features]
default = []


[dev-dependencies]
bytepiece_rs = "0.1.0"
criterion = "0.5.1"

[[bench]]
name = "tokenize"
harness = false
